# m3u8_creator

./: .coveragerc  .env_vars  .gitattributes  .gitignore  .pydocstyle  .pylintrc  .sonarcloud.properties  CODEOWNERS  LICENSE  README.md  allstreams.txt  last_attempt.txt  mypy.ini  pytest.ini  requirements.txt  setup.cfg  stream-cleaner.py  streamcleaner.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
Jellyfin_Plugins/: list_of_plugins.txt  manifest.json  readme.md
Requirements/: requirements-dev-testing.txt
data/: .gitignore
dev/: check_package_safety.bat  check_package_safety.sh  check_package_safety_bare.bat  make_shell_scripts_exec_in_git.bat  run_linters.bat  run_linters.sh  run_tests.bat  run_tests.sh
epg/: EPG Files Stored Here.txt
ez_m3u8_creator/: __init__.py  m3u8.py  project_logger.py
json/: jsonfileshere.txt
m3u8/: 0nradio.m3u8  30atv.m3u8  5-Minute-IPTV.m3u8  AnthymTV.m3u8  BigRRadio.m3u8  CanelaTV.m3u8  DeltaSr95combined.m3u8  Freeli.m3u8  Galxytv.m3u8  GotRadio.m3u8  HerogoTV.m3u8  LocalNow.m3u8  Muzzik.m3u8  MyTvToGo.m3u8  PromoDJ.m3u8  RakutenTV.m3u8  RedBoxTV.m3u8  RoStreamTV_ONLINE.m3u8  Roku.m3u8  SamsungTVPlus.m3u8  SamsungTVPlusall.m3u8  Sphinxrootmusic.m3u8  Sphinxroottubi.m3u8  Stirr.m3u8  TV25.m3u8  TubiTV.m3u8  VizioTV.m3u8  WatchYourTV.m3u8  Weareone.m3u8  africa.m3u8  all-africa.m3u8  all-arab%20countries.m3u8  all-asia.m3u8  all-europe.m3u8  all-latinamerica.m3u8  all-streams.m3u8  anthymtv.m3u8  arab countries.m3u8  asia.m3u8  avotv.m3u8  (+126 more)
readmes/: 0nradio.md  181fm.md  readme.md
scripts/: add_epg_url_into_m3u8.py  (+15 more)
(+344 files in other folders)
