[bdist_wheel]
universal = true

[metadata]
name = "ez-m3u8-creator"
version = 0.1.0
author = Eric Ziethen
author-email = ericziethen@gmail.com
home-page = https://github.com/ericziethen/ez-m3u8-creator
description = Create up to date m3u8 files
long-description = file:README.md
long-description-content-type = text/markdown; charset=UTF-8
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 3.0
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.9
packages=find:

[options.packages.find]
exclude =
    tests
